--- a/binary_sensor.yaml
+++ b/binary_sensor.yaml
@@ -24,4 +24,11 @@
     payload_off: "0"
     device_class: light
     value_template: '{{ value_json.light }}'
-
+  - platform: mqtt
+    state_topic: "Trihome/tri03/state"
+    name: ishuman
+    qos: 0
+    payload_on: "1"
+    payload_off: "0"
+    device_class: safety
+    value_template: '{{ value_json.ishuman }}'
